fix(whiteSpace): parent of white space can not have overflow scroll-fixed

--- a/src/components/lists/searchList/searchList.css
+++ b/src/components/lists/searchList/searchList.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200&display=swap');
+
 .searchlist-container {
     height: 85%;
     width: 100%;
@@ -8,25 +9,30 @@
     overflow-y: scroll;
     scroll-behavior: smooth;
 }
+
 .searchlist-container::-webkit-scrollbar {
     width: 0;
 }
+
 .sl-awaiting-input {
-    display:flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
+
 .sl-awaiting-input p {
     font-family: 'Noto Sans', sans-serif;
     font-size: 14px;
     font-weight: 200;
 }
-.ufo-ico{
+
+.ufo-ico {
     font-size: 45px;
     margin-top: 25px;
 }
-.sl-filter-buttons{
+
+.sl-filter-buttons {
     display: flex;
     flex-wrap: wrap;
     position: sticky;
@@ -40,6 +46,7 @@
     white-space: nowrap;
 
 }
+
 .slf-btn {
     border: 1px solid #f1f1f1;
     margin: auto 5px;
@@ -49,14 +56,12 @@
     color: #f1f1f1;
     padding: 1vh;
 }
-.slf-btn-selected{
+
+.slf-btn-selected {
     border: 1px solid #00F79F;
     color: #00F79F;
 }
-.white-space {
-    height: 35vh;
 
-}
 .artist-image {
     border-radius: 50px;
-  }
+}
