--- a/src/components/profileChart/profileChart.css
+++ b/src/components/profileChart/profileChart.css
@@ -18,6 +18,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 120px;
+    width: 120px;
 }
 
 .pcc-profile-image {
