--- a/src/pages/homePage/homePage.css
+++ b/src/pages/homePage/homePage.css
@@ -1,6 +1,8 @@
 .home-page-container {
     display: flex;
     flex-direction: column;
+    height: 100vh;
+    width: 100vw;
 }
 
 .home-heading-container {
@@ -8,7 +10,6 @@
     justify-content: space-between;
     align-items: center;
     padding: 15px 25px 15px;
-
 }
 
 .home-setting-icon {
