--- a/src/pages/userPage/userPage.css
+++ b/src/pages/userPage/userPage.css
@@ -1,6 +1,7 @@
 .user-page-container {
+    display: flex;
+    flex-direction: column;
     height: 100vh;
     width: 100vw;
     padding: 1rem;
-    overflow: hidden;
 }
